<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>hirsizlik.mtgacollection</groupId>
	<artifactId>mtgacollection</artifactId>
	<version>17</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<skip.rpm>true</skip.rpm>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.13.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.13.2</version>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.36.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.2</version>
		</dependency>

		<!-- Optional, if absent a simple self-made implementation will be used. 
			Doesn't work with jlink. -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.2</version>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<build>
		<directory>${project.basedir}/target</directory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.moditect</groupId>
				<artifactId>moditect-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>exec-maven-plugin</artifactId>
				<groupId>org.codehaus.mojo</groupId>
			</plugin>
		</plugins>
		<outputDirectory>${project.build.directory}/classes</outputDirectory>
		<testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
		<sourceDirectory>${project.basedir}/src/hirsizlik.mtgacollection</sourceDirectory>
		<resources>
			<resource>
				<directory>${project.basedir}/src/resource/</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>${project.basedir}/src/test/</directory>
			</testResource>
		</testResources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<archive>
							<manifest>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								<mainClass>hirsizlik.mtgacollection.main.MTGACollectionMain</mainClass>
							</manifest>
						</archive>
						<outputDirectory>${project.build.directory}/jar</outputDirectory>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<executions>
						<execution>
							<phase>prepare-package</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
							<configuration>
								<outputDirectory>${project.build.directory}/modules_copy</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.moditect</groupId>
					<artifactId>moditect-maven-plugin</artifactId>
					<version>1.0.0.RC1</version>
					<executions>
						<execution>
							<id>add-module-info-to-dependencies</id>
							<phase>package</phase>
							<configuration>
								<outputDirectory>${project.build.directory}/modules_generated</outputDirectory>
								<modules>
									<module>
										<artifact>
											<groupId>org.xerial</groupId>
											<artifactId>sqlite-jdbc</artifactId>
										</artifact>
										<moduleInfo />
									</module>
								</modules>
							</configuration>
							<goals>
								<goal>add-module-info</goal>
							</goals>
						</execution>

						<execution>
							<id>create-runtime-image</id>
							<phase>package</phase>
							<goals>
								<goal>create-runtime-image</goal>
							</goals>
							<configuration>
								<modulePath>
									<path>${project.build.directory}/jar:${project.build.directory}/modules_generated:${project.build.directory}/modules_copy</path>
								</modulePath>
								<modules>
									<module>hirsizlik.mtgacollection</module>
								</modules>
								<launcher>
									<name>mtgacollection</name>
									<module>hirsizlik.mtgacollection</module>
								</launcher>
								<outputDirectory>
									${project.build.directory}/jlink-image
								</outputDirectory>
								<compression>2</compression>
								<noManPages>true</noManPages>
								<stripDebug>true</stripDebug>
								<noHeaderFiles>true</noHeaderFiles>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.0.0</version>
					<groupId>org.codehaus.mojo</groupId>
					<executions>
						<execution>
							<id>Creating a RPM Package via jpackage</id>
							<phase>package</phase>
							<goals>
								<goal>exec</goal>
							</goals>
							<configuration>
								<skip>${skip.rpm}</skip>
								<executable>bash</executable>
								<arguments>
									<argument>${project.basedir}/jpackage-rpm.sh</argument>
									<argument>${project.version}</argument>
								</arguments>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>